# python_patterns

./: pyproject.toml
core/: batches.py  test_allocate.py
db/: orm.py
direct_calls/: pyproject.toml  test.db
direct_calls/core/: allocate.py  batches.py  product.py  repository.py  test_allocate.py  test_batches.py  test_repository.py
direct_calls/db/: orm.py
direct_calls/services/: message_bus.py  services.py  test_services.py  test_unit_of_work.py  unit_of_work.py
direct_calls/web_app/: conftest.py  main.py  models.py  test.db  test_api.py
events/code/: hello.py  pyproject.toml
events/code/src/allocation/adapters/: orm.py
web_app/: main.py
