[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "mypy>=1.15.0",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "pytest-icdiff>=0.9",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy<2",
    "tenacity>=9.0.0",
]
